# step

./: .gitignore  .gitmodules
asp/: asp.sln
asp/CRUD/: app.py
asp/HW1/: HW1.sln  Program.cs
asp/HW2/: asp-projects.csproj  asp-projects.sln
asp/HW3/: Program.cs  l2.sln
asp/HW4/: HW4.sln  Program.cs
asp/project1/: Program.cs
bank-accounts/: BankAccounts.sln
bank-accounts/BankAccounts/: App.h  BankAccounts.vcxproj.filters  Card.cpp  FIO.cpp
car-service-centre/car-service-centre/: App.cpp  Brand.h  Car.h  CarService.h  CarServiceQueue.cpp  CarServiceQueueVector.h  Color.h  CreateCarService.cpp  Menu.h  car-service-centre.vcxproj
class-work/: CMakeLists.txt  bus.cpp  car.cpp  carfactory.cpp  color.cpp  main.cpp  menu.cpp  pickupfactory.cpp  pickupfactory.h  sedan.h  sedanfactory.h  store.cpp  store.h  truckfactory.cpp
cpp/HOMEWORK/HW8/: CMakeLists.txt  animal.cpp  animal.h  cat.cpp  cat.h  dog.cpp  dog.h  horse.cpp  horse.h  main.cpp
cpp/car-service-centre/: car-service-centre.sln
cpp/class-work/: bus.h  busfactory.cpp  busfactory.h  car.h  carfactory.h  color.h  menu.h  pickup.cpp  pickup.h  sedan.cpp  sedanfactory.cpp  truck.cpp  truck.h  truckfactory.h
cpp/http-request/: http-request.sln
cpp/lists/: Lists.sln
cpp/thread/: pr_dz.txt
csharp/ConsoleApp2/: ConsoleApp2.sln
csharp/ConsoleApp3/: ConsoleApp3.sln
csharp/ConsoleApp4/: ConsoleApp4.sln
csharp/Files/: Files.sln
mysql/: HW3.sql  HW4.sql  HW5.sql  HW6.sql  W4.sql  W4_books.sql  W4_pets.sql  Работа с OPEN SERVER .docx
tbot/: botto.py  school_bot.py  tasks.json  todo.py
(+1498 files in other folders)
